tests/RV64M/invalid/src/001-invalid2.s
# Invalid instruction placeholder 2
.text

.global _start

_start:
